modified ignore file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-  <title>Hello</title>
+  <title>Testing git renderring</title>
   <body>
-    <h1></h1>
+    <h1>Found this content</h1>
   </body>
 </html>
