--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>Testing git renderring</title>
   <body>
-    <h1>Found this content</h1>
+    <h1>Found this content test</h1>
   </body>
 </html>
