--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>Testing git renderring</title>
   <body>
-    <h1>Now this works with live TEST DDD - works d</h1>
+    <h1>now manually pulling to server</h1>
   </body>
 </html>
