--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <title>Testing git renderring</title>
   <body>
-    <h1>now manually pulling to server</h1>
+    <h1>now manually pulling to server works 
+    </h1>
+    <p>
+    	some text here
+    </p>
+    
   </body>
 </html>
