--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <h1>now manually pulling to server works 
     </h1>
     <p>
-    	some text here
+    	some text here ddd 
     </p>
     
   </body>
