--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     	some text here ddd 
     </p>
     
+    <div style="width: 100%; height: 100px;">
+    	new div added 
+    </div>
+    
   </body>
 </html>
