udpated index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     	new div added 
     </div>
     
+    <div style="width: 100%; height: 100px;">
+        new 	new div added 
+    </div>
+    
   </body>
 </html>
