modied inex.html file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     </div>
       <h1>This is going to be a good tutorial soon :)</h1>
       <h5>Magento || Laravel || NodeJs</h5>
+	  
+	  <h5>MODIFIED FORKED</h5>
+	  
   </body>
 </html>
